--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <Section>
-        <div>
+        <div class="left-part">
             <h1>Welcome to</h1> 
             <h1> <span class="name-higlight">Mahmud </span> Website</h1>
         </div>
+        
     </Section>
     
 </body>
